crates/usfm_semantic/tests/snapshots/checks__duplicate_verse_number__same_segment.snap
---
source: crates/usfm_semantic/tests/checks.rs
description: "\\id GEN\n\\c 1\n\\p \\v 4a a \\v 4a b"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..31
  VerseStart 4a@16..21
  Text "a"@22..24
  VerseEnd 4a
  Text " "
  VerseStart 4a@24..29
  Text "b"@30..31
  VerseEnd 4a
ChapterEnd 1
--- diagnostics
warning[duplicate-verse-number] @24..29: verse 4a occurs more than once in chapter 1
